--- a/configs/datasets/ssdg_pacs.yaml
+++ b/configs/datasets/ssdg_pacs.yaml
@@ -1,12 +1,12 @@
 INPUT:
   SIZE: (224, 224)
-  TRANSFORMS: ['random_flip', 'random_translation', 'normalize']
+  TRANSFORMS: ["random_flip", "random_translation", "normalize"]
 
 DATASET:
-  NAME: 'SSDGPACS'
+  NAME: "SSDGPACS"
   NUM_LABELED: 210
 
 MODEL:
   BACKBONE:
-    NAME: 'resnet18'
+    NAME: "resnet18"
     PRETRAINED: True
